--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.48",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
